# sandworm

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: README.md  docker-compose.yml  rules.yar
docker/clean_corpus/: README.md
docs/: handling-real-samples.md  interpreting-confidence.md  setup.md  threat-model.md  writing-an-analyzer.md
plugins_example/: example_analyzer.py
samples/: README.md
samples/benign/: README.md  contact_form.php  greet  greet.c  wordcount  wordcount.c
samples/synthetic/: README.md  benign_dropper.sh  benign_elf.c  benign_macro.doc  benign_webshell.php  recorded_cape_report.json  recorded_vol3_report.json
sandworm/: __init__.py  cli.py
sandworm/analyzers/: base.py  registry.py
sandworm/analyzers/dynamic/: linux_sandbox.py  php_runtime.py  script_runtime.py  windows_cape.py
sandworm/analyzers/memory/: diffsnap.py  vol3.py
sandworm/analyzers/static/: common.py  decode.py  elf.py  emulate.py  fingerprint.py  lnk.py  office.py  pdf.py  pe.py  php.py  script.py  unpack.py
sandworm/copilot/: cypher.py  graphrag.py  sanitize.py
sandworm/core/: audit.py  config.py  evidence.py  isolation.py  pipeline.py  provenance.py  providers.py  sample.py  simhash.py  triage.py
sandworm/detect/: optimize.py  sigma_gen.py  yara_gen.py
sandworm/enrich/: canary.py  differential.py  generate.py
sandworm/graphdb/: client.py  schema.py
sandworm/reconstruct/: attack_map.py  bayes.py  explain.py  graph.py  lineage.py  narrative.py  runtime.py  temporal.py  timeline.py
sandworm/reporting/: _logo.py  coverage.py  export.py  report.py  stream.py  summary.py
tests/: conftest.py  test_attack_map_confidence.py  test_batch_cli.py  test_bayes_confidence.py  test_clean_corpus.py  test_copilot_grounding.py  test_decode_sweep.py  test_dynamic_memory_replay.py  test_elf_structural.py  test_emulation_unpack.py  test_end_to_end_php.py  test_evidence_schema.py  test_explain_and_detections.py  test_exports.py  test_ioc_and_webshell.py  test_ioc_noise_and_score.py  test_isolation_gate.py  test_lineage.py  test_new_formats.py  test_pe_headers_and_wide_strings.py  test_performance_features.py  test_php_deobfuscation.py  test_provenance.py  test_rule_optimization.py  test_sample_store_aes.py  test_similarity_hashing.py  test_streaming.py  test_synthetic_generation.py  test_triage_router.py  test_unpack_layers.py  test_yara_gen_clean.py
